--- a/ios/Podfile
+++ b/ios/Podfile
@@ -48,13 +48,31 @@ target 'PowerIO' do
     # Pods for testing
   end
 
-  post_install do |installer|
-    react_native_post_install(
-      installer,
-      # Set `mac_catalyst_enabled` to `true` in order to apply patches
-      # necessary for Mac Catalyst builds
-      :mac_catalyst_enabled => false
-    )
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
-  end
+#  post_install do |installer|
+#    react_native_post_install(
+#      installer,
+#      # Set `mac_catalyst_enabled` to `true` in order to apply patches
+#      # necessary for Mac Catalyst builds
+#      :mac_catalyst_enabled => false
+#    )
+#    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+#  end
+	
+	post_install do |installer|
+		flipper_post_install(installer)
+
+		react_native_post_install(installer)
+		__apply_Xcode_12_5_M1_post_install_workaround(installer)
+		
+		#arm64 simulator EXCLUDED_ARCHS setting:
+		installer.pods_project.build_configurations.each do |config|
+			config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+		end
+
+		installer.pods_project.targets.each do |target|
+			target.build_configurations.each do |config|
+				config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+			end
+		end
+	end
 end
